Добавил разметку основного контента для catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -37,7 +37,157 @@
       </nav>
     </header>
     <main class="container">
+      <header class="content-header">
+        <h1 class="content-header__headline">Средства для ухода</h1>
+        <nav class="content-header__breadcrumbs">
+          <ul class="breadcrumbs__list">
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="index.html">Главная</a>
+            </li>
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="catalog.html">Магазин</a>
+            </li>
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="catalog.html">Средства для ухода</a><!-- Указать адрес !! -->
+            </li>
+          </ul>
+        </nav>
+      </header>
 
+      <section class="filters">
+        <h2 class="visually-hidden">Фильтры товаров</h2>
+        <section class="manufacturers-filter">
+          <h3 class="manufacturers-filter__headline">Производители:</h3>
+          <ul class="manufacturers-filter__list">
+            <li class="manufacturers-filter__item">
+              <a class="manufacturers-filter__link" href="#">Baxter of California</a>
+            </li>
+            <li class="manufacturers-filter__item">
+              <a class="manufacturers-filter__link" href="#">Mr Natty</a>
+            </li>
+            <li class="manufacturers-filter__item">
+              <a class="manufacturers-filter__link" href="#">Suavecito</a>
+            </li>
+            <li class="manufacturers-filter__item">
+              <a class="manufacturers-filter__link" href="#">Malin+Goetz</a>
+            </li>
+            <li class="manufacturers-filter__item">
+              <a class="manufacturers-filter__link" href="#">Murray's</a>
+            </li>
+            <li class="manufacturers-filter__item">
+              <a class="manufacturers-filter__link" href="#">American crew</a>
+            </li>
+          </ul>
+        </section>
+
+        <section class="product-groups">
+          <h3 class="product-groups__headline">Группы товаров:</h3>
+          <ul class="product-groups__list">
+            <li class="product-groups__item">
+              <a class="product-groups__link" href="#">Бритвенные принадлежности</a>
+            </li>
+            <li class="product-groups__item">
+              <a class="product-groups__link" href="#">Средства для ухода</a>
+            </li>
+            <li class="product-groups__item">
+              <a class="product-groups__link" href="#">Аксессуары</a>
+            </li>
+          </ul>
+        </section>
+
+        <a class="button filters__button" href="#">Показать</a>
+      </section>
+
+      <section class="products">
+        <h2 class="visually-hidden">Товары</h2>
+        <ul class="products__list">
+          <li class="products__item">
+            <figure class="products__item-pic">
+              <a class="products__item-link" href="catalog-item.html">
+                <img class="products__item-img" src="http://placehold.it/150x100" width="150" height="100" alt="Набор для путешествий &laquo;Baxter of California&raquo;">
+              </a>
+              <figcaption class="products__item-description">Набор для путешествий &laquo;<span>Baxter of California<span></span>&raquo;</figcaption>
+            </figure>
+            <p class="products__item-price">2 900 &#8381;</p>
+            <a class="button products__item-button">Купить</a>
+          </li>
+
+          <li class="products__item">
+            <figure class="products__item-pic">
+              <a class="products__item-link" href="#">
+                <img class="products__item-img" src="http://placehold.it/150x100" width="150" height="100" alt="Увлажняющий кондиционер &laquo;Baxter of California&raquo;">
+              </a>
+              <figcaption class="products__item-description">Увлажняющий кондиционер &laquo;<span>Baxter of California<span></span>&raquo;</figcaption>
+            </figure>
+            <p class="products__item-price">750 &#8381;</p>
+            <a class="button products__item-button">Купить</a>
+          </li>
+
+          <li class="products__item">
+            <figure class="products__item-pic">
+              <a class="products__item-link" href="#">
+                <img class="products__item-img" src="http://placehold.it/150x100" width="150" height="100" alt="Гель для волос &laquo;Suavecito&raquo;">
+              </a>
+              <figcaption class="products__item-description">Гель для волос &laquo;<span>Suavecito<span></span>&raquo;</figcaption>
+            </figure>
+            <p class="products__item-price">290 &#8381;</p>
+            <a class="button products__item-button">Купить</a>
+          </li>
+
+          <li class="products__item">
+            <figure class="products__item-pic">
+              <a class="products__item-link" href="#">
+                <img class="products__item-img" src="http://placehold.it/150x100" width="150" height="100" alt="Глина для укладки волос &laquo;American crew&raquo;">
+              </a>
+              <figcaption class="products__item-description">Глина для укладки волос &laquo;<span>American crew<span></span>&raquo;</figcaption>
+            </figure>
+            <p class="products__item-price">500 &#8381;</p>
+            <a class="button products__item-button">Купить</a>
+          </li>
+
+          <li class="products__item">
+            <figure class="products__item-pic">
+              <a class="products__item-link" href="#">
+                <img class="products__item-img" src="http://placehold.it/150x100" width="150" height="100" alt="Гель для волос &laquo;American crew&raquo;">
+              </a>
+              <figcaption class="products__item-description">Гель для волос &laquo;<span>American crew<span></span>&raquo;</figcaption>
+            </figure>
+            <p class="products__item-price">300 &#8381;</p>
+            <a class="button products__item-button">Купить</a>
+          </li>
+
+          <li class="products__item">
+            <figure class="products__item-pic">
+              <a class="products__item-link" href="#">
+                <img class="products__item-img" src="http://placehold.it/150x100" width="150" height="100" alt="Набор для бритья &laquo;Baxter of California&raquo;">
+              </a>
+              <figcaption class="products__item-description">Набор для бритья &laquo;<span>Baxter of California<span></span>&raquo;</figcaption>
+            </figure>
+            <p class="products__item-price">3 900 &#8381;</p>
+            <a class="button products__item-button">Купить</a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="product-pages">
+        <h2 class="product-pages__headline">Страницы товаров</h2>
+        <nav class="product-pages__nav">
+          <ol class="product-pages__list">
+            <li class="product-pages__item">
+              <a class="product-pages__link" href="#">1</a>
+            </li>
+            <li class="product-pages__item">
+              <a class="product-pages__link" href="#">2</a>
+            </li>
+            <li class="product-pages__item">
+              <a class="product-pages__link" href="#">3</a>
+            </li>
+            <li class="product-pages__item">
+              <a class="product-pages__link" href="#">4</a>
+            </li>
+          </ol>
+        </nav>
+      </section>
     </main>
     <footer class="page-footer">
       <p class="page-footer__contacts">
