Добавил разметку основного контента для catalog-item.html. Добавил секцию и изменил название классов в карточках товаров, удалил адрес текущей страницы из меню breadcrumbs в catalog.html

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -37,7 +37,86 @@
       </nav>
     </header>
     <main class="container">
+      <header class="content-header">
+        <h1 class="content-header__headline">Средства для ухода</h1>
+        <nav class="content-header__breadcrumbs">
+          <ul class="breadcrumbs__list">
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="index.html">Главная</a>
+            </li>
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="shop.html">Магазин</a>
+            </li>
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="catalog.html">Средства для ухода</a>
+            </li>
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link">Набор для путешествий &laquo;Baxter of California&raquo;</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
 
+      <section class="card-gallery">
+        <h2 class="visually-hidden">Галерея товара</h2>
+        <ul class="card-gallery__list">
+          <li class="card-gallery__item">
+            <figure class="card-gallery__pic">
+              <a class="card-gallery__link" href="http://placehold.it/500x500">
+                <img class="card-gallery__img" src="http://placehold.it/300x300" width="300" height="300" alt="Набор для путешествий &laquo;Baxter of California&raquo;">
+              </a>
+            </figure>
+          </li>
+          <li class="card-gallery__item">
+            <figure class="card-gallery__pic">
+              <a class="card-gallery__link" href="http://placehold.it/500x500">
+                <img class="card-gallery__img" src="http://placehold.it/100x100" width="100" height="100" alt="Набор для путешествий &laquo;Baxter of California&raquo;">
+              </a>
+            </figure>
+          </li>
+          <li class="card-gallery__item">
+            <figure class="card-gallery__pic">
+              <a class="card-gallery__link" href="http://placehold.it/500x500">
+                <img class="card-gallery__img" src="http://placehold.it/100x100" width="100" height="100" alt="Набор для путешествий &laquo;Baxter of California&raquo;">
+              </a>
+            </figure>
+          </li>
+          <li class="card-gallery__item">
+            <figure class="card-gallery__pic">
+              <a class="card-gallery__link" href="http://placehold.it/500x500">
+                <img class="card-gallery__img" src="http://placehold.it/100x100" width="100" height="100" alt="Набор для путешествий &laquo;Baxter of California&raquo;">
+              </a>
+            </figure>
+          </li>
+        </ul>
+      </section>
+
+      <section class="card-description">
+        <h2 class="visually-hidden">Описание товара</h2>
+        <section class="card-info">
+          <h3 class="visually-hidden">Краткая информация по товару</h3>
+          <p class="card-info__availability">Есть в наличии</p>
+          <p class="card-info__vendor-code">Артикул: Dexter-ae</p>
+          <p class="card-info__short-info">Trave kit - Yеобходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство ля умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+        </section>
+
+        <section class="price-block">
+          <h3 class="visually-hidden">Цена товара</h3>
+          <p class="card-description__price card-price">2 900 &#8381;</p>
+          <a class="button card-description__button" href="#">Купить</a>
+        </section>
+
+        <section class="card-equipment">
+          <h3 class="card-equipment__headline">В набор входят:</h3>
+          <ul class="card-equipment__list">
+            <li class="card-equipment__item">Cредство для умывания (50 мл)</li>
+            <li class="card-equipment__item">Увлажняющий крем (50 мл)</li>
+            <li class="card-equipment__item">Крем для бритья (50 мл)</li>
+            <li class="card-equipment__item">Крем после бритья, шампунь (50 мл)</li>
+            <li class="card-equipment__item">Удобная кожаная косметичка</li>
+          </ul>
+        </section>
+      </section>
     </main>
     <footer class="page-footer">
       <p class="page-footer__contacts">
