--- a/catalog.html
+++ b/catalog.html
@@ -45,10 +45,10 @@
               <a class="breadcrumbs__link" href="index.html">Главная</a>
             </li>
             <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="catalog.html">Магазин</a>
+              <a class="breadcrumbs__link" href="shop.html">Магазин</a>
             </li>
             <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="catalog.html">Средства для ухода</a><!-- Указать адрес !! -->
+              <a class="breadcrumbs__link">Средства для ухода</a>
             </li>
           </ul>
         </nav>
@@ -101,70 +101,88 @@
       <section class="products">
         <h2 class="visually-hidden">Товары</h2>
         <ul class="products__list">
-          <li class="products__item">
-            <figure class="products__item-pic">
-              <a class="products__item-link" href="catalog-item.html">
-                <img class="products__item-img" src="http://placehold.it/150x100" width="150" height="100" alt="Набор для путешествий &laquo;Baxter of California&raquo;">
+          <li class="products__card">
+            <figure class="products__card-pic">
+              <a class="products__card-link" href="catalog-item.html">
+                <img class="products__card-img" src="http://placehold.it/150x100" width="150" height="100" alt="Набор для путешествий &laquo;Baxter of California&raquo;">
               </a>
-              <figcaption class="products__item-description">Набор для путешествий &laquo;<span>Baxter of California<span></span>&raquo;</figcaption>
+              <figcaption class="products__card-description">Набор для путешествий &laquo;<span>Baxter of California<span></span>&raquo;</figcaption>
             </figure>
-            <p class="products__item-price">2 900 &#8381;</p>
-            <a class="button products__item-button">Купить</a>
+            <section class="price-block">
+              <h3 class="visually-hidden">Цена товара</h3>
+              <p class="products__card-price card-price">2 900 &#8381;</p>
+              <a class="button products__card-button">Купить</a>
+            </section>
           </li>
 
-          <li class="products__item">
-            <figure class="products__item-pic">
-              <a class="products__item-link" href="#">
-                <img class="products__item-img" src="http://placehold.it/150x100" width="150" height="100" alt="Увлажняющий кондиционер &laquo;Baxter of California&raquo;">
+          <li class="products__card">
+            <figure class="products__card-pic">
+              <a class="products__card-link" href="#">
+                <img class="products__card-img" src="http://placehold.it/150x100" width="150" height="100" alt="Увлажняющий кондиционер &laquo;Baxter of California&raquo;">
               </a>
-              <figcaption class="products__item-description">Увлажняющий кондиционер &laquo;<span>Baxter of California<span></span>&raquo;</figcaption>
+              <figcaption class="products__card-description">Увлажняющий кондиционер &laquo;<span>Baxter of California<span></span>&raquo;</figcaption>
             </figure>
-            <p class="products__item-price">750 &#8381;</p>
-            <a class="button products__item-button">Купить</a>
+            <section class="price-block">
+              <h3 class="visually-hidden">Цена товара</h3>
+              <p class="products__card-price card-price">750 &#8381;</p>
+              <a class="button products__card-button">Купить</a>
+            </section>
           </li>
 
-          <li class="products__item">
-            <figure class="products__item-pic">
-              <a class="products__item-link" href="#">
-                <img class="products__item-img" src="http://placehold.it/150x100" width="150" height="100" alt="Гель для волос &laquo;Suavecito&raquo;">
+          <li class="products__card">
+            <figure class="products__card-pic">
+              <a class="products__card-link" href="#">
+                <img class="products__card-img" src="http://placehold.it/150x100" width="150" height="100" alt="Гель для волос &laquo;Suavecito&raquo;">
               </a>
-              <figcaption class="products__item-description">Гель для волос &laquo;<span>Suavecito<span></span>&raquo;</figcaption>
+              <figcaption class="products__card-description">Гель для волос &laquo;<span>Suavecito<span></span>&raquo;</figcaption>
             </figure>
-            <p class="products__item-price">290 &#8381;</p>
-            <a class="button products__item-button">Купить</a>
+            <section class="price-block">
+              <h3 class="visually-hidden">Цена товара</h3>
+              <p class="products__card-price card-price">290 &#8381;</p>
+              <a class="button products__card-button">Купить</a>
+            </section>
           </li>
 
-          <li class="products__item">
-            <figure class="products__item-pic">
-              <a class="products__item-link" href="#">
-                <img class="products__item-img" src="http://placehold.it/150x100" width="150" height="100" alt="Глина для укладки волос &laquo;American crew&raquo;">
+          <li class="products__card">
+            <figure class="products__card-pic">
+              <a class="products__card-link" href="#">
+                <img class="products__card-img" src="http://placehold.it/150x100" width="150" height="100" alt="Глина для укладки волос &laquo;American crew&raquo;">
               </a>
-              <figcaption class="products__item-description">Глина для укладки волос &laquo;<span>American crew<span></span>&raquo;</figcaption>
+              <figcaption class="products__card-description">Глина для укладки волос &laquo;<span>American crew<span></span>&raquo;</figcaption>
             </figure>
-            <p class="products__item-price">500 &#8381;</p>
-            <a class="button products__item-button">Купить</a>
+            <section class="price-block">
+              <h3 class="visually-hidden">Цена товара</h3>
+              <p class="products__card-price card-price">500 &#8381;</p>
+              <a class="button products__card-button">Купить</a>
+            </section>
           </li>
 
-          <li class="products__item">
-            <figure class="products__item-pic">
-              <a class="products__item-link" href="#">
-                <img class="products__item-img" src="http://placehold.it/150x100" width="150" height="100" alt="Гель для волос &laquo;American crew&raquo;">
+          <li class="products__card">
+            <figure class="products__card-pic">
+              <a class="products__card-link" href="#">
+                <img class="products__card-img" src="http://placehold.it/150x100" width="150" height="100" alt="Гель для волос &laquo;American crew&raquo;">
               </a>
-              <figcaption class="products__item-description">Гель для волос &laquo;<span>American crew<span></span>&raquo;</figcaption>
+              <figcaption class="products__card-description">Гель для волос &laquo;<span>American crew<span></span>&raquo;</figcaption>
             </figure>
-            <p class="products__item-price">300 &#8381;</p>
-            <a class="button products__item-button">Купить</a>
+            <section class="price-block">
+              <h3 class="visually-hidden">Цена товара</h3>
+              <p class="products__card-price card-price">300 &#8381;</p>
+              <a class="button products__card-button">Купить</a>
+            </section>
           </li>
 
-          <li class="products__item">
-            <figure class="products__item-pic">
-              <a class="products__item-link" href="#">
-                <img class="products__item-img" src="http://placehold.it/150x100" width="150" height="100" alt="Набор для бритья &laquo;Baxter of California&raquo;">
+          <li class="products__card">
+            <figure class="products__card-pic">
+              <a class="products__card-link" href="#">
+                <img class="products__card-img" src="http://placehold.it/150x100" width="150" height="100" alt="Набор для бритья &laquo;Baxter of California&raquo;">
               </a>
-              <figcaption class="products__item-description">Набор для бритья &laquo;<span>Baxter of California<span></span>&raquo;</figcaption>
+              <figcaption class="products__card-description">Набор для бритья &laquo;<span>Baxter of California<span></span>&raquo;</figcaption>
             </figure>
-            <p class="products__item-price">3 900 &#8381;</p>
-            <a class="button products__item-button">Купить</a>
+            <section class="price-block">
+              <h3 class="visually-hidden">Цена товара</h3>
+              <p class="products__card-price card-price">3 900 &#8381;</p>
+              <a class="button products__card-button">Купить</a>
+            </section>
           </li>
         </ul>
       </section>
