Добавил разметку основного контента для price.html. Изменил название классов в catalog-item.html

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -38,7 +38,7 @@
     </header>
     <main class="container">
       <header class="content-header">
-        <h1 class="content-header__headline">Средства для ухода</h1>
+        <h1 class="content-header__headline">Набор для путешествий &laquo;Baxter of California&</h1>
         <nav class="content-header__breadcrumbs">
           <ul class="breadcrumbs__list">
             <li class="breadcrumbs__item">
@@ -106,14 +106,14 @@
           <a class="button card-description__button" href="#">Купить</a>
         </section>
 
-        <section class="card-equipment">
-          <h3 class="card-equipment__headline">В набор входят:</h3>
-          <ul class="card-equipment__list">
-            <li class="card-equipment__item">Cредство для умывания (50 мл)</li>
-            <li class="card-equipment__item">Увлажняющий крем (50 мл)</li>
-            <li class="card-equipment__item">Крем для бритья (50 мл)</li>
-            <li class="card-equipment__item">Крем после бритья, шампунь (50 мл)</li>
-            <li class="card-equipment__item">Удобная кожаная косметичка</li>
+        <section class="card-kit">
+          <h3 class="card-kit__headline">В набор входят:</h3>
+          <ul class="card-kit__list">
+            <li class="card-kit__item">Cредство для умывания (50 мл)</li>
+            <li class="card-kit__item">Увлажняющий крем (50 мл)</li>
+            <li class="card-kit__item">Крем для бритья (50 мл)</li>
+            <li class="card-kit__item">Крем после бритья, шампунь (50 мл)</li>
+            <li class="card-kit__item">Удобная кожаная косметичка</li>
           </ul>
         </section>
       </section>
