--- a/price.html
+++ b/price.html
@@ -37,7 +37,60 @@
       </nav>
     </header>
     <main class="container">
+      <header class="content-header">
+        <h1 class="content-header__headline">Прайс-лист</h1>
+        <nav class="content-header__breadcrumbs">
+          <ul class="breadcrumbs__list">
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="index.html">Главная</a>
+            </li>
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link">Прайс-лист</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
 
+      <p class="promo-text">Истинно мужская классика</p>
+
+      <section class="equipment">
+        <h2 class="visually-hidden">Оснащение</h2>
+        <b class="equipment__lid">Мы используем только лучшие средства:</b>
+        <ul class="equipment__list">
+          <li class="equipment__item">Baxter of California</li>
+          <li class="equipment__item">Mr Natty</li>
+          <li class="equipment__item">Suavecito</li>
+          <li class="equipment__item">Malin+Goetz</li>
+        </ul>
+      </section>
+
+      <section class="service-price">
+        <h2 class="service-price__headline">Цены на услуги наших мастеров:</h2>
+        <table class="service-price__table">
+          <tr class="service-price__table-row">
+            <th class="service-price__table-header">Стрижка</th>
+            <td class="service-price__table-data">1 500 &#8381;</td>
+          </tr>
+          <tr class="service-price__table-row">
+            <th class="service-price__table-header">Стрижка бороды</th>
+            <td class="service-price__table-data">500 &#8381;</td>
+          </tr>
+          <tr class="service-price__table-row">
+            <th class="service-price__table-header">Накрутка усов</th>
+            <td class="service-price__table-data">350 &#8381;</td>
+          </tr>
+        </table>
+      </section>
+
+      <section class="about-us">
+        <h2 class="about-us__headline">Несколько слов о нас:</h2>
+        <p class="about-us__info">Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
+      </section>
+
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <p class="advantages__info">Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</p>
+      </section>
     </main>
     <footer class="page-footer">
       <p class="page-footer__contacts">
