--- a/price.html
+++ b/price.html
@@ -10,7 +10,7 @@
     <header class="page-header">
       <nav class="page-header__nav">
         <a class="page-header__logo" href="index.html">
-          <img class="page-header__img" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип барбершопа &laquo;Borodinski&raquo;">
+          <img class="page-header__img" src="http://placehold.it/111x24" width="111" height="24" alt="Логотип барбершопа &laquo;Borodinski&raquo;">
         </a>
         <ul class="page-nav page-nav--main">
           <li class="page-nav__item">
@@ -19,7 +19,7 @@
           <li class="page-nav__item">
             <a class="page-nav__link" href="news.html">Новости</a>
           </li>
-          <li class="page-nav__item">
+          <li class="page-nav__item page-nav__current">
             <a class="page-nav__link" href="price.html">Прайс-лист</a>
           </li>
           <li class="page-nav__item">
@@ -37,19 +37,15 @@
       </nav>
     </header>
     <main class="container">
-      <header class="content-header">
-        <h1 class="content-header__headline">Прайс-лист</h1>
-        <nav class="content-header__breadcrumbs">
-          <ul class="breadcrumbs__list">
-            <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="index.html">Главная</a>
-            </li>
-            <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link">Прайс-лист</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
+      <h1 class="content-header__headline">Прайс-лист</h1>
+      <ul class="breadcrumbs__list">
+        <li class="breadcrumbs__item">
+          <a class="breadcrumbs__link" href="index.html">Главная</a>
+        </li>
+        <li class="breadcrumbs__item">
+          <a class="breadcrumbs__link breadcrumbs__current">Прайс-лист</a>
+        </li>
+      </ul>
 
       <p class="promo-text">Истинно мужская классика</p>
 
