--- a/catalog-item.html
+++ b/catalog-item.html
@@ -10,7 +10,7 @@
     <header class="page-header">
       <nav class="page-header__nav">
         <a class="page-header__logo" href="index.html">
-          <img class="page-header__img" src="http://placehold.it/150x100" width="150" height="100" alt="Логотип барбершопа &laquo;Borodinski&raquo;">
+          <img class="page-header__img" src="http://placehold.it/111x24" width="111" height="24" alt="Логотип барбершопа &laquo;Borodinski&raquo;">
         </a>
         <ul class="page-nav page-nav--main">
           <li class="page-nav__item">
@@ -22,7 +22,7 @@
           <li class="page-nav__item">
             <a class="page-nav__link" href="price.html">Прайс-лист</a>
           </li>
-          <li class="page-nav__item">
+          <li class="page-nav__item page-nav__current">
             <a class="page-nav__link" href="catalog.html">Магазин</a>
           </li>
           <li class="page-nav__item">
@@ -37,85 +37,57 @@
       </nav>
     </header>
     <main class="container">
-      <header class="content-header">
-        <h1 class="content-header__headline">Набор для путешествий &laquo;Baxter of California&</h1>
-        <nav class="content-header__breadcrumbs">
-          <ul class="breadcrumbs__list">
-            <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="index.html">Главная</a>
-            </li>
-            <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="shop.html">Магазин</a>
-            </li>
-            <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="catalog.html">Средства для ухода</a>
-            </li>
-            <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link">Набор для путешествий &laquo;Baxter of California&raquo;</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
+      <h1 class="content-header__headline">Набор для путешествий &laquo;Baxter of California&</h1>
+      <ul class="breadcrumbs__list">
+        <li class="breadcrumbs__item">
+          <a class="breadcrumbs__link" href="index.html">Главная</a>
+        </li>
+        <li class="breadcrumbs__item">
+          <a class="breadcrumbs__link" href="catalog.html">Магазин</a>
+        </li>
+        <li class="breadcrumbs__item">
+          <a class="breadcrumbs__link" href="catalog.html">Средства для ухода</a>
+        </li>
+        <li class="breadcrumbs__item">
+          <a class="breadcrumbs__link breadcrumbs__current">Набор для путешествий &laquo;Baxter of California&raquo;</a>
+        </li>
+      </ul>
 
       <section class="card-gallery">
         <h2 class="visually-hidden">Галерея товара</h2>
-        <ul class="card-gallery__list">
-          <li class="card-gallery__item">
-            <figure class="card-gallery__pic">
-              <a class="card-gallery__link" href="http://placehold.it/500x500">
-                <img class="card-gallery__img" src="http://placehold.it/300x300" width="300" height="300" alt="Набор для путешествий &laquo;Baxter of California&raquo;">
-              </a>
-            </figure>
+        <p class="card-gallery__full">
+          <img class="card-gallery__full-img" src="http://placehold.it/460x498" width="460" height="498" alt="Фото всего набора">
+        </p>
+        <ul class="card-gallery__preview">
+          <li class="card-gallery__preview-item">
+            <img class="card-gallery__img" src="http://placehold.it/140x149" width="140" height="149" alt="Фото в анфас">
           </li>
-          <li class="card-gallery__item">
-            <figure class="card-gallery__pic">
-              <a class="card-gallery__link" href="http://placehold.it/500x500">
-                <img class="card-gallery__img" src="http://placehold.it/100x100" width="100" height="100" alt="Набор для путешествий &laquo;Baxter of California&raquo;">
-              </a>
-            </figure>
+          <li class="card-gallery__preview-item">
+            <img class="card-gallery__img" src="http://placehold.it/140x149" width="140" height="149" alt="Фото в профиль">
           </li>
-          <li class="card-gallery__item">
-            <figure class="card-gallery__pic">
-              <a class="card-gallery__link" href="http://placehold.it/500x500">
-                <img class="card-gallery__img" src="http://placehold.it/100x100" width="100" height="100" alt="Набор для путешествий &laquo;Baxter of California&raquo;">
-              </a>
-            </figure>
-          </li>
-          <li class="card-gallery__item">
-            <figure class="card-gallery__pic">
-              <a class="card-gallery__link" href="http://placehold.it/500x500">
-                <img class="card-gallery__img" src="http://placehold.it/100x100" width="100" height="100" alt="Набор для путешествий &laquo;Baxter of California&raquo;">
-              </a>
-            </figure>
+          <li class="card-gallery__preview-item">
+            <img class="card-gallery__img" src="http://placehold.it/140x149" width="140" height="149" alt="Фото отдельной части">
           </li>
         </ul>
       </section>
 
-      <section class="card-description">
+      <section class="card-info">
         <h2 class="visually-hidden">Описание товара</h2>
-        <section class="card-info">
-          <h3 class="visually-hidden">Краткая информация по товару</h3>
-          <p class="card-info__availability">Есть в наличии</p>
-          <p class="card-info__vendor-code">Артикул: Dexter-ae</p>
-          <p class="card-info__short-info">Trave kit - Yеобходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство ля умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
-        </section>
-
-        <section class="price-block">
-          <h3 class="visually-hidden">Цена товара</h3>
-          <p class="card-description__price card-price">2 900 &#8381;</p>
-          <a class="button card-description__button" href="#">Купить</a>
-        </section>
-
-        <section class="card-kit">
-          <h3 class="card-kit__headline">В набор входят:</h3>
-          <ul class="card-kit__list">
-            <li class="card-kit__item">Cредство для умывания (50 мл)</li>
-            <li class="card-kit__item">Увлажняющий крем (50 мл)</li>
-            <li class="card-kit__item">Крем для бритья (50 мл)</li>
-            <li class="card-kit__item">Крем после бритья, шампунь (50 мл)</li>
-            <li class="card-kit__item">Удобная кожаная косметичка</li>
-          </ul>
-        </section>
+        <p class="card-info__availability">Есть в наличии</p>
+        <p class="card-info__vendor-code">Артикул: Dexter-ae</p>
+        <p class="card-info__short-info">Trave kit - Yеобходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство ля умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+        <p class="card-info__price">
+          <b class="card-info__cost card-price">2 900 &#8381;</b>
+          <a class="card-info__button button">Купить</a>
+        </p>
+        <h3 class="card-info__kit-headline">В набор входят:</h3>
+        <ul class="card-info__kit-list">
+          <li class="card-info__kit-item">Cредство для умывания (50 мл)</li>
+          <li class="card-info__kit-item">Увлажняющий крем (50 мл)</li>
+          <li class="card-info__kit-item">Крем для бритья (50 мл)</li>
+          <li class="card-info__kit-item">Крем после бритья, шампунь (50 мл)</li>
+          <li class="card-info__kit-item">Удобная кожаная косметичка</li>
+        </ul>
       </section>
     </main>
     <footer class="page-footer">
